Sales Report Commit